--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
          
         
         <main>
-           <img src="./myProfilePic.jpg" id="profile-pic" alt="Head shot of Me">
+           <img src="./myprofilepic.jpg" id="profile-pic" alt="Head shot of Me">
             <a class="has-border">
             <h1> Holly Grudovich</h1>
             <h2>Student of Web Development</h2></a>
