--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
        <img src="https://cdn.evbuc.com/eventlogos/188084824/acastandardcirclefullname.png" class="logo" alt="austin coding academy logo"> 
  
         <a class="has-border"> <a href="./resume/resume.html">Resume</a></a>
-        <a class="has-border">About Me</a>
+        <a class="has-border"><a href="aboutMe/index.html">About Me</a></a>
         <a class="has-border">My Blog</a>
-        <a class="has-border">Contact Me</a> 
+        <a class="has-border"><a href="./contactpage/contactpage.html">Contact Me</a> 
       </header>
       
         <body>
